examples/test/testpolicy18598.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18598
  namespace: namespace297
spec:
  podSelector:
    matchLabels:
      key27: value4
      key11: value30
      key35: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value15
      podSelector:
        matchLabels:
          key47: value30
          key23: value7
          key31: value3
